[tool.poetry]
name = "pyd-mon"
version = "0.1.0"
description = ""
authors = ["MrTj458 <mrtj458@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
